--- a/Overflow.AppHost/Overflow.AppHost.csproj
+++ b/Overflow.AppHost/Overflow.AppHost.csproj
@@ -13,6 +13,11 @@
     <ItemGroup>
         <PackageReference Include="Aspire.Hosting.AppHost" Version="9.5.2"/>
         <PackageReference Include="Aspire.Hosting.Keycloak" Version="9.3.1-preview.1.25305.6" />
+        <PackageReference Include="Aspire.Hosting.PostgreSQL" Version="9.3.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\QuestionService\QuestionService.csproj" />
     </ItemGroup>
 
 </Project>
