--- a/Overflow.AppHost/Overflow.AppHost.csproj
+++ b/Overflow.AppHost/Overflow.AppHost.csproj
@@ -11,10 +11,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Aspire.Hosting.AppHost" Version="9.5.2"/>
-        <PackageReference Include="Aspire.Hosting.Keycloak" Version="9.3.1-preview.1.25305.6" />
-        <PackageReference Include="Aspire.Hosting.PostgreSQL" Version="9.3.1" />
-        <PackageReference Include="Aspire.Hosting.RabbitMQ" Version="9.3.1" />
+        <PackageReference Include="Aspire.Hosting.AppHost" Version="9.4.0" />
+        <PackageReference Include="Aspire.Hosting.Docker" Version="9.4.0-preview.1.25378.8" />
+        <PackageReference Include="Aspire.Hosting.Keycloak" Version="9.4.0-preview.1.25378.8" />
+        <PackageReference Include="Aspire.Hosting.PostgreSQL" Version="9.4.0" />
+        <PackageReference Include="Aspire.Hosting.RabbitMQ" Version="9.4.0" />
+        <PackageReference Include="Aspire.Hosting.Yarp" Version="9.4.0-preview.1.25378.8" />
     </ItemGroup>
 
     <ItemGroup>
