wolverine & polly configuration setup from common project for all project usage

--- a/QuestionService/QuestionService.csproj
+++ b/QuestionService/QuestionService.csproj
@@ -4,7 +4,8 @@
         <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
-        <NoWarn>NU168</NoWarn>
+        <NoWarn>NU160</NoWarn>
+        <NoWarn>NU1608</NoWarn>
     </PropertyGroup>
 
     <ItemGroup>
@@ -15,13 +16,11 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Polly" Version="8.6.2" />
-        <PackageReference Include="WolverineFx.RabbitMQ" Version="4.7.0" />
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Common\Common.csproj" />
       <ProjectReference Include="..\Contracts\Contracts.csproj" />
-      <ProjectReference Include="..\Overflow.ServiceDefaults\Overflow.ServiceDefaults.csproj" />
     </ItemGroup>
 
 </Project>
