--- a/SearchService/SearchService.csproj
+++ b/SearchService/SearchService.csproj
@@ -9,12 +9,11 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.3"/>
         <PackageReference Include="Typesense" Version="7.36.0" />
-        <PackageReference Include="WolverineFx.RabbitMQ" Version="4.7.0" />
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Common\Common.csproj" />
       <ProjectReference Include="..\Contracts\Contracts.csproj" />
-      <ProjectReference Include="..\Overflow.ServiceDefaults\Overflow.ServiceDefaults.csproj" />
     </ItemGroup>
 
     <ItemGroup>
