--- a/VoteService/VoteService.csproj
+++ b/VoteService/VoteService.csproj
@@ -4,6 +4,8 @@
         <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <NoWarn>NU160</NoWarn>
+        <NoWarn>NU1608</NoWarn>
     </PropertyGroup>
 
     <ItemGroup>
