--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Aspire.Keycloak.Authentication" Version="9.4.0-preview.1.25378.8" />
       <PackageReference Include="Polly" Version="8.6.2" />
       <PackageReference Include="WolverineFx.RabbitMQ" Version="4.8.0" />
     </ItemGroup>
