--- a/Overflow.AppHost/Overflow.AppHost.csproj
+++ b/Overflow.AppHost/Overflow.AppHost.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="Aspire.Hosting.AppHost" Version="9.4.0" />
         <PackageReference Include="Aspire.Hosting.Docker" Version="9.4.0-preview.1.25378.8" />
         <PackageReference Include="Aspire.Hosting.Keycloak" Version="9.4.0-preview.1.25378.8" />
+        <PackageReference Include="Aspire.Hosting.NodeJs" Version="9.4.0" />
         <PackageReference Include="Aspire.Hosting.PostgreSQL" Version="9.4.0" />
         <PackageReference Include="Aspire.Hosting.RabbitMQ" Version="9.4.0" />
         <PackageReference Include="Aspire.Hosting.Yarp" Version="9.4.0-preview.1.25378.8" />
