--- a/webapp/package.json
+++ b/webapp/package.json
@@ -12,11 +12,13 @@
     "@heroicons/react": "^2.2.0",
     "@heroui/react": "^2.8.5",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.25",
     "next": "15.5.7",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
