--- a/QuestionService/QuestionService.csproj
+++ b/QuestionService/QuestionService.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
         <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.4.0" />
+        <PackageReference Include="HtmlSanitizer" Version="9.1.891-beta" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.3"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.11">
           <PrivateAssets>all</PrivateAssets>
