.env files on build must be provided through config.ts & production web application setup

--- a/infra/.env
+++ b/infra/.env
@@ -21,3 +21,6 @@ SEARCH_SVC_IMAGE=search-svc:latest
 
 # We need to add this manually
 TYPESENSE_API_KEY=abc
+# Container image name for webapp
+WEBAPP_IMAGE=webapp:latest
+
