--- a/webapp/package.json
+++ b/webapp/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.2.0",
     "@heroui/react": "^2.8.5",
     "@hookform/resolvers": "^5.2.2",
+    "@next/env": "^16.0.8",
     "@tiptap/extension-image": "^3.13.0",
     "@tiptap/pm": "^3.13.0",
     "@tiptap/react": "^3.13.0",
