--- a/QuestionService/QuestionService.csproj
+++ b/QuestionService/QuestionService.csproj
@@ -21,6 +21,7 @@
     <ItemGroup>
       <ProjectReference Include="..\Common\Common.csproj" />
       <ProjectReference Include="..\Contracts\Contracts.csproj" />
+      <ProjectReference Include="..\Reputation\Reputation.csproj" />
     </ItemGroup>
 
 </Project>
