--- a/QuestionService/QuestionService.csproj
+++ b/QuestionService/QuestionService.csproj
@@ -15,6 +15,8 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="WolverineFx.EntityFrameworkCore" Version="4.9.3" />
+        <PackageReference Include="WolverineFx.Postgresql" Version="4.9.3" />
     </ItemGroup>
 
     <ItemGroup>
