--- a/infra/.env
+++ b/infra/.env
@@ -24,3 +24,21 @@ TYPESENSE_API_KEY=abc
 # Container image name for webapp
 WEBAPP_IMAGE=webapp:latest
 
+# Default container port for profile-svc
+PROFILE_SVC_PORT=8080
+
+# Default container port for stat-svc
+STAT_SVC_PORT=8080
+
+# Default container port for vote-svc
+VOTE_SVC_PORT=8080
+
+# Container image name for profile-svc
+PROFILE_SVC_IMAGE=profile-svc:latest
+
+# Container image name for stat-svc
+STAT_SVC_IMAGE=stat-svc:latest
+
+# Container image name for vote-svc
+VOTE_SVC_IMAGE=vote-svc:latest
+
